# corpus-watch

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: SCOPE.md  VISION.md
docs/adr/: 0001-greenfield-over-portfoliomanager.md  0002-frontend-asset-loading.md  0003-license-clause-or-later.md  0004-license-agpl-3-0.md  0005-backend-stack.md  0006-database-sqlite.md  0007-self-hosted-single-tenant.md  0008-refresh-strategy-lazy-ttl.md  0009-family-first-data-model.md  0010-frontend-stack.md  README.md
docs/eval/: portfoliomanager-AUDIT.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_price_quotes.py
src/corpus_watch/: database.py  main.py  models.py  repository.py  settings.py
src/corpus_watch/assets/: __init__.py
src/corpus_watch/assets/mf/: __init__.py
src/corpus_watch/ingest/: cas.py
src/corpus_watch/pricing/: mfapi.py
src/corpus_watch/routers/: import_.py  networth.py  setup.py
tests/: conftest.py  test_cascade.py  test_decimal.py  test_health.py  test_import_cas.py  test_networth.py  test_networth_history.py  test_setup.py  test_smoke.py
tests/integration/: test_real_cas.py
tests/integration/fixtures/: README.md
tests/pricing/: test_mfapi.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/components/: AddAssetsDropdown.tsx  AppHeader.tsx  CasImportModal.test.tsx  CasImportModal.tsx  NetWorthCard.tsx  NetWorthChart.tsx  SetupScreen.tsx
